added check for contains and priority

--- a/Autocomplete/Autocomplete.csproj
+++ b/Autocomplete/Autocomplete.csproj
@@ -53,7 +53,9 @@
     <EmbeddedResource Include="Input.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <Content Include="Output.txt" />
+    <EmbeddedResource Include="Output.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
